fixed matchItem styling

--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -60,12 +60,13 @@
 .matchItemWrapper {
   border: 1px solid #d5d5d5;
   @apply
-  flex flex-col justify-between p-1 items-center bg-white
+  grid grid-cols-1 gap-5 bg-white
+  md:grid-cols-3
   lg:flex-row;
 
   .teamWrapper {
     @apply
-    flex;
+    flex items-center justify-center p-5;
     .teamLogo {
       height: 30px;
       margin-right: 5px;;
@@ -73,7 +74,7 @@
   }
   .matchInfos {
     @apply
-    flex flex-col items-center justify-center text-center p-3;
+    flex flex-col items-center justify-center text-center p-0;
     .gamePlace {
       @apply
       flex;
