--- a/src/app/components/qualified-person-card/qualified-person-card.component.scss
+++ b/src/app/components/qualified-person-card/qualified-person-card.component.scss
@@ -1,6 +1,7 @@
 .qualifiedPersonWrapper {
   border-radius: 2px;
   background: white;
+  height: 100%;
   .cardHeader {
     background: #252931;
     color:white;
