optimized sponsor page

--- a/src/app/pages/sponsoring/sponsoring.component.html
+++ b/src/app/pages/sponsoring/sponsoring.component.html
@@ -5,9 +5,15 @@
     </p>
 </div>
 <div class="textBox">
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+    <div>
+        <h2>Der Verband</h2>
+        Die Handballgemeinschaft Region Förde ist ein Zusammenschluss der Kreishandballverbände Kiel und Plön. Wir organisieren den Spielbetrieb von der Regionsklasse bis zur Regionsoberliga. Etwa 30 Vereine mit Teams verschiedener Altersklassen gehören zum Einzugsgebiet.
+
+    </div>
+    <div>
+        <h2>Unterstüzen Sie die freiwiliige Arbeit</h2>
+        Mit einem Sponsoring unterstützen Sie aktiv die vielen ehrenamtlichen Helfer bei ihrer Arbeit und eröffnen neue Möglichkeiten. 
+    </div>
 </div>
 <div class="featuredReasonsGrid">
     <div class="factItem">
