--- a/src/app/pages/sponsoring/sponsoring.component.scss
+++ b/src/app/pages/sponsoring/sponsoring.component.scss
@@ -11,8 +11,8 @@
 
 .textBox {
     @apply
-    px-2 mt-2 mb-2
-    lg:px-96;
+    px-2 mt-5 mb-5 grid grid-cols-1
+    lg:px-96 lg:grid-cols-2 lg:gap-10;
 }
 
 .featuredReasonsGrid {
