--- a/src/app/pages/sponsoring/sponsoring.component.html
+++ b/src/app/pages/sponsoring/sponsoring.component.html
@@ -11,7 +11,7 @@
 
     </div>
     <div>
-        <h2>Unterstüzen Sie die freiwiliige Arbeit</h2>
+        <h2>Unterstüzen Sie die freiwilige Arbeit</h2>
         Mit einem Sponsoring unterstützen Sie aktiv die vielen ehrenamtlichen Helfer bei ihrer Arbeit und eröffnen neue Möglichkeiten. 
     </div>
 </div>
