optimized qualified person card

--- a/src/app/components/qualified-person-card/qualified-person-card.component.html
+++ b/src/app/components/qualified-person-card/qualified-person-card.component.html
@@ -11,7 +11,7 @@
     <div class="contactArea">
       <div class="contactItem">
         <img *ngIf="email" height="20" src="/assets/icons/mail.svg" />
-        <span>{{email}}</span>
+        <span><a href="mailto:{{email}}]">{{email}}</a></span>
       </div>
       <div class="contactItem">
         <img *ngIf="mobilePhone" height="20" src="/assets/icons/phone.svg" />
