--- a/src/app/components/appointment-widget/appointment-widget.component.html
+++ b/src/app/components/appointment-widget/appointment-widget.component.html
@@ -4,9 +4,12 @@
     <div *ngIf="appointmentList.length === 0">Keine aktuellen Termine</div>
     <div *ngFor="let appointment of appointmentList; index as i">
       <div
+        [ngClass]="{'hinweisActive': appointment.Hinweis === true}"
         class="item"
         [routerLink] = "['/termine', appointment.id]"
+       
       >
+        <img class="infoIcon" *ngIf="appointment.Hinweis" src="/assets/icons/info.png" />
         <span>{{appointment.Datum}}</span>
         <h2>{{appointment.Thema}}</h2>
       </div>
