fixed club item component with to long item name

--- a/src/app/components/club-card/club-card.component.scss
+++ b/src/app/components/club-card/club-card.component.scss
@@ -22,7 +22,13 @@
     background: #252931;
     color:white;
   }
-}
+  .clubInfos {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  }
+
 
 .clubCardWrapper:hover {
   justify-content: center;
