--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -28,6 +28,11 @@
       height: 300px;
       object-fit: cover;
     }
+    .textStyles{
+     a {
+      text-decoration: underline;
+     }
+    }
     .timestamp {
       font-size: 12px;
     }
