added new supages tiles

--- a/src/app/pages/referee/referee.component.html
+++ b/src/app/pages/referee/referee.component.html
@@ -3,17 +3,22 @@
     <div class="subpagesGrid">
       <div class="suppageWidget">
         <h2>Zentrale Grundausbildung</h2>
-        <p>Der Weg zum Schiedsrichter</p>
         <button [routerLink] = "['/schiedsrichter','zentrale-grundausbildung']">Mehr Informationen</button>
       </div>
       <div class="suppageWidget">
         <h2>Fortbildungen</h2>
-        <p>Terminübersicht und weitere Informationen</p>
         <button [routerLink] = "['/schiedsrichter','fortbildung']">Mehr Informationen</button>
       </div>
       <div class="suppageWidget">
         <h2>Regelwerk</h2>
-        <p>Viele aktuelle Informationen</p>
+        <button [routerLink] = "['/schiedsrichter','regelwerk']">Mehr Informationen</button>
+      </div>
+      <div class="suppageWidget">
+        <h2>Schiedsrichterausschuss</h2>
+        <button [routerLink] = "['/schiedsrichter','regelwerk']">Mehr Informationen</button>
+      </div>
+      <div class="suppageWidget">
+        <h2>Downloads</h2>
         <button [routerLink] = "['/schiedsrichter','regelwerk']">Mehr Informationen</button>
       </div>
     </div>
