--- a/src/app/pages/referee/referee.component.scss
+++ b/src/app/pages/referee/referee.component.scss
@@ -43,6 +43,7 @@
       margin-bottom: 5px;
     }
     .suppageWidget button{
+      margin-top: 10px;
       border: 1px solid white;
       background: none;
       padding: 10px;
