--- a/src/app/pages/referee/referee.component.html
+++ b/src/app/pages/referee/referee.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="suppageWidget">
         <h2>Schiedsrichterausschuss</h2>
-        <button [routerLink] = "['/schiedsrichter','regelwerk']">Mehr Informationen</button>
+        <button [routerLink] = "['/schiedsrichter','ausschuss']">Mehr Informationen</button>
       </div>
       <div class="suppageWidget">
         <h2>Downloads</h2>
