added referee download page

--- a/src/app/pages/referee/referee.component.html
+++ b/src/app/pages/referee/referee.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="suppageWidget">
         <h2>Downloads</h2>
-        <button [routerLink] = "['/schiedsrichter','regelwerk']">Mehr Informationen</button>
+        <button [routerLink] = "['/schiedsrichter','downloads']">Mehr Informationen</button>
       </div>
     </div>
     <div class="contactItems">
