--- a/src/app/pages/referee/comittee/comittee.component.html
+++ b/src/app/pages/referee/comittee/comittee.component.html
@@ -1,3 +1,4 @@
+<app-subpage-header [pageTitle]="'Schiedsrichterausschuss'"></app-subpage-header>
 <div class="comitteeWrapper">
     <div *ngFor="let person of memberlist; index as i">
         <app-qualified-person-card
@@ -10,5 +11,4 @@
         >
         </app-qualified-person-card>
     </div>
-
 </div>
