--- a/src/app/pages/referee/referee.component.html
+++ b/src/app/pages/referee/referee.component.html
@@ -27,8 +27,9 @@
         Ansprechpartner
       </div>
       <div class="body">
-        <div class="contactItem" *ngFor="let contact of qualifiedPersonList; index as i">
-          <div class="profileImage" >
+        <div  *ngFor="let contact of qualifiedPersonList; index as i">
+          <div class="contactItem">
+            <div class="profileImage" >
             <img *ngIf="!contact.profilbild" src="assets/icons/user.png" />
             <img *ngIf="contact.profilbild" [src]="strapiUrl + contact.profilbild" />
 
@@ -36,7 +37,17 @@
           <div class="textWrapper">
             <p class="position">{{contact.position}}</p>
           <p class="name">{{contact.vorname}} {{contact.nachname}}</p>
+          <div class="mailWrapper">
+            <img src="assets/icons/mail.png" />
+            <a href="mailto:{{contact.email}}"> 
+            <span>{{contact.email}}</span>
+            </a>
+            
           </div>
+          </div>
+          </div>
+          
+          <hr>
         </div>
         
       </div>
