--- a/src/app/pages/referee/referee.component.scss
+++ b/src/app/pages/referee/referee.component.scss
@@ -80,7 +80,7 @@
 
     .contactItem {
       @apply
-      grid grid-cols-4;
+      grid grid-cols-4 mb-2;
       .profileImage {
         @apply flex justify-center items-center;
         img {
@@ -94,6 +94,20 @@
         .position {
         font-weight: bold;
       }
+      }
+
+      .mailWrapper {
+        @apply flex items-center;
+        img {
+          @apply mr-1;
+          height: 15px;
+        }
+        span {
+          font-size: 12px;
+        }
+      }
+      .mailWrapper:hover {
+       text-decoration: underline;
       }
       
     }
