--- a/src/app/pages/referee/central-basic-training/central-basic-training.component.html
+++ b/src/app/pages/referee/central-basic-training/central-basic-training.component.html
@@ -1,3 +1,33 @@
-<div class="centralBasicTrainingWrapper">
-  <h1>Zentrale Grundausbildung</h1>
+<app-subpage-header [pageTitle]="'Zentrale Grundausbildung'"></app-subpage-header>
+<div class="wrapper">
+  <div class="textBlock">
+    sdhfsdohfsdpxfiidsfpijdsfpi
+  </div>
+  <div class="sidebar">
+    <app-contact-person-list [qualifiedPersonList]="AnsprechpartnerListe"></app-contact-person-list>
+    <div class="sidebarItem">
+      <div class="header">
+        Das solltest du mitbringen
+      </div>
+      <div class="body">
+        fdsfsdfd
+      </div>
+    </div>
+    <div class="sidebarItem">
+      <div class="header">
+        Das solltest du mitbringen
+      </div>
+      <div class="body">
+        fdsfsdfd
+      </div>
+    </div>
+    <div class="sidebarItem">
+      <div class="header">
+        Das solltest du mitbringen
+      </div>
+      <div class="body">
+        fdsfsdfd
+      </div>
+    </div>
+  </div>
 </div>
