added qualified person list to rules page

--- a/src/app/pages/referee/rules/rules.component.html
+++ b/src/app/pages/referee/rules/rules.component.html
@@ -2,7 +2,10 @@
 
 <div class="rulesWrapper">
   <div class="textAreaWrapper">
-    <app-editorjs-wrapper [jsonInput]="textareaData"></app-editorjs-wrapper>
+    <!--
+          <app-editorjs-wrapper [jsonInput]="textareaData"></app-editorjs-wrapper>
+
+    -->
     <!--
       <div *ngFor="let textItem of textareaData.blocks; index as i">
       <p *ngIf="textItem.type === 'paragraph'" [innerHtml]="textItem.data.text">
@@ -20,21 +23,6 @@
     
 
   </div>
-  <div class="contactItems">
-    <div class="header">
-      Ansprechpartner
-    </div>
-    <div class="body">
-      <div class="contactItem">
-        <div class="profileImage" >
-          <img  src="assets/icons/user.png" />
-        </div>
-        <div class="textWrapper">
-          <p class="position">ffdsfsd</p>
-        <p class="name">dfsfd</p>
-        </div>
-      </div>
-      
-    </div>
-  </div>
+  <app-contact-person-list [qualifiedPersonList]="AnsprechpartnerListe"></app-contact-person-list>
+
 </div>
