--- a/src/app/pages/referee/training/training.component.html
+++ b/src/app/pages/referee/training/training.component.html
@@ -1,3 +1,1 @@
-<div class="trainingWrapper">
-  <h1>Fortbildungen</h1>
-</div>
+<app-subpage-header [pageTitle]="'Forbildungen'"></app-subpage-header>
