--- a/src/app/pages/referee/training/training.component.html
+++ b/src/app/pages/referee/training/training.component.html
@@ -1,1 +1,9 @@
 <app-subpage-header [pageTitle]="'Forbildungen'"></app-subpage-header>
+<div class="wrapper">
+  <div class="content">
+
+  </div>
+  <div class="sidebar">
+    <app-contact-person-list [qualifiedPersonList]="AnsprechpartnerListe"></app-contact-person-list>
+  </div>
+</div>
