filled editorjs wrapper with functions

--- a/src/app/components/editorjs-wrapper/editorjs-wrapper.component.html
+++ b/src/app/components/editorjs-wrapper/editorjs-wrapper.component.html
@@ -1,1 +1,15 @@
-<p>editorjs-wrapper works!</p>
+<div *ngFor="let block of contentItems; index as i">
+    <h2 *ngIf="block.type === 'header'">{{block.data}}</h2>
+    <p *ngIf="block.type === 'paragraph'">{{block.data}}</p>
+    <table class="table" *ngIf="block.type === 'table'">
+    <tbody>
+        <tr *ngFor="let row of block.data.content">
+        <td *ngFor="let colum of row">{{colum}}</td>
+        </tr>
+    </tbody>
+    </table>
+    <ol class="listItem" *ngIf="block.type === 'list'">
+        <li *ngFor="let item of block.data">{{item}}</li>
+    </ol>
+    <img *ngIf="block.type === 'image'" [src]="strapiUrl +block.data.file.url" />
+</div>
