--- a/src/app/pages/referee/central-basic-training/central-basic-training.component.html
+++ b/src/app/pages/referee/central-basic-training/central-basic-training.component.html
@@ -1,7 +1,7 @@
 <app-subpage-header [pageTitle]="'Zentrale Grundausbildung'"></app-subpage-header>
 <div class="wrapper">
   <div class="textBlock">
-    sdhfsdohfsdpxfiidsfpijdsfpi
+    <app-editorjs-wrapper [jsonInput]="textblockJson"></app-editorjs-wrapper>
   </div>
   <div class="sidebar">
     <app-contact-person-list [qualifiedPersonList]="AnsprechpartnerListe"></app-contact-person-list>
