--- a/src/app/pages/referee/central-basic-training/central-basic-training.component.scss
+++ b/src/app/pages/referee/central-basic-training/central-basic-training.component.scss
@@ -9,12 +9,12 @@
 
 .textBlock {
   @apply 
-  col-span-1
+  col-span-1 bg-white p-4
   lg:col-span-4;
 }
 
 .sidebar {
-  @apply grid gap-2;
+  @apply grid gap-2 h-min;
 }
 .sidebarItem {
   .header {
