--- a/src/app/pages/referee/training/training.component.scss
+++ b/src/app/pages/referee/training/training.component.scss
@@ -2,8 +2,8 @@
 
 .wrapper {
   @apply 
-  grid grid-cols-5 gap-2 px-2 mt-2 mb-2
-  lg:px-10;
+  grid grid-cols-1 gap-2 px-2 mt-2 mb-2
+  lg:px-10 lg:grid-cols-5;
 }
 
 .content {
