HRF-1 added new download tile design

--- a/src/app/pages/referee/downloads/downloads.component.scss
+++ b/src/app/pages/referee/downloads/downloads.component.scss
@@ -4,6 +4,12 @@
     lg:px-10;
 }
 
+.refereeDownloadsWrapper {
+    @apply
+    px-2 mt-2 mb-2
+    lg:px-10;
+}
+
 .fileItem {
     .header {
         background: #252931;
