added phoenix iframe to referee training page

--- a/src/app/pages/referee/training/training.component.html
+++ b/src/app/pages/referee/training/training.component.html
@@ -1,7 +1,7 @@
 <app-subpage-header [pageTitle]="'Forbildungen'"></app-subpage-header>
 <div class="wrapper">
   <div class="content">
-
+    <iframe class="phoenixFrame"   src="https://hvsh.it4sport.de/index.php?phoenix=phoenixbase.seminar.pages.SeminarSearchPage" ></iframe>
   </div>
   <div class="sidebar">
     <app-contact-person-list [qualifiedPersonList]="AnsprechpartnerListe"></app-contact-person-list>
